brocode-rs/tui/src/bottom_pane/snapshots/brocode_tui__bottom_pane__chat_composer__tests__footer_mode_overlay_then_external_esc_hint.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› Ask Brocode to do anything                                                                        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  esc again to edit previous message                                                                "
